<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/mail"
            android:title="@string/menu_contactus" />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/chat"
            android:title="@string/menu_faqs" />
        <item
            android:id="@+id/nav_howtoproceed"
            android:icon="@drawable/careerpath"
            android:title="@string/menu_howtoproceed" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support"
            android:title="@string/menu_support" />
    </group>
</menu>